k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ajktown-api
  namespace: ajktown
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ajktown-api
  template:
    metadata:
      labels:
        app: ajktown-api
    spec:
      containers:
      - name: ajktown-api
        image: ajktown/api:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 10 # Takes about 10~15 seconds to start api server
          periodSeconds: 10
