k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ajktown-api-sa
  namespace: ajktown
  labels:
    app: ajktown-api
spec:
  selector:
    app: ajktown-api
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: ajktown-db-sa
  namespace: ajktown
  labels:
    app: ajktown-db
spec:
  selector:
    app: ajktown-db-sa
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer
