k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ajktown-api-ingress
  namespace: ajktown
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:671093793941:certificate/9fb9c2a8-46c7-4cfa-96db-a54aa932c05f
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=production,Owner=ajktown,App=ajktown
  labels:
    app: my-app
spec:
  rules:
    - host: api.ajktown.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: ajktown-api-svc
                port:
                  number: 80
